feat(models): create basic model
