# master/api/user/user.go
@@ -1,7 +1,11 @@
+//go:build !test
+
 package user
 
 import (
+	"GalaxyEmpireWeb/api"
 	"GalaxyEmpireWeb/models"
+	"GalaxyEmpireWeb/services/userservice"
 	"net/http"
 	"strconv"
 
@@ -9,12 +13,12 @@ import (
 )
 
 type UserResponse struct {
-	Succeed bool        `json:"succeed"`
-	Data    models.User `json:"data"`
+	Succeed bool            `json:"succeed"`
+	Data    *models.UserDTO `json:"data"`
 }
 type UsersResponse struct {
-	Succeed bool          `json:"succeed"`
-	Data    []models.User `json:"data"`
+	Succeed bool             `json:"succeed"`
+	Data    []models.UserDTO `json:"data"`
 }
 
 // GetUser godoc
@@ -25,30 +29,40 @@ type UsersResponse struct {
 // @Produce json
 // @Param id path int true "User ID"
 // @Success 200 {object} UserResponse "Successful response with user data"
-// @Failure 400 {object} map[string]interface{} "Bad Request with error message"
-// @Failure 500 {object} map[string]interface{} "Internal Server Error with error message"
+// @Failure 400 {object} api.ErrorResponse "Bad Request with error message"
+// @Failure 500 {object} api.ErrorResponse "Internal Server Error with error message"
 // @Router /user/{id} [get]
 func GetUser(c *gin.Context) {
-	var user models.User
+	userService, err := userservice.GetService()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "User service not initialized",
+		})
+	}
 	idStr := c.Param("id")
 	id, err := strconv.Atoi(idStr)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"succeed": false,
-			"error":   err.Error(),
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Wrong User ID",
 		})
 		return
 	}
-	err = user.GetByID(uint(id))
+	user, err := userService.GetById(uint(id), []string{})
 	if err != nil {
-		c.JSON(http.StatusNotFound, UserResponse{
+		c.JSON(http.StatusOK, api.ErrorResponse{
 			Succeed: false,
+			Error:   err.Error(),
+			Message: "User not found",
 		})
 		return
 	}
 	c.JSON(http.StatusOK, UserResponse{
 		Succeed: true,
-		Data:    user,
+		Data:    user.ToDTO(),
 	})
 }
 
@@ -59,22 +73,35 @@ func GetUser(c *gin.Context) {
 // @Accept json
 // @Produce json
 // @Success 200 {object} UsersResponse "Successful response with user data"
-// @Failure 400 {object} map[string]interface{} "Bad Request with error message"
-// @Failure 500 {object} map[string]interface{} "Internal Server Error with error message"
+// @Failure 400 {object} api.ErrorResponse "Bad Request with error message"
+// @Failure 500 {object} api.ErrorResponse "Internal Server Error with error message"
 // @Router /users [get]
 func GetUsers(c *gin.Context) {
-	var users []models.User
-	err := models.GetAllUsers(&users)
+	userService, err := userservice.GetService()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "User service not initialized",
+		})
+	}
+	users, err := userService.GetAllUsers()
+	usersDTO := make([]models.UserDTO, len(users))
+	for _, user := range users {
+		usersDTO = append(usersDTO, *user.ToDTO())
+	}
 
 	if err != nil {
-		c.JSON(http.StatusNotFound, UsersResponse{
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
 			Succeed: false,
+			Error:   err.Error(),
+			Message: "Failed to get users",
 		})
 		return
 	}
 	c.JSON(http.StatusOK, UsersResponse{
 		Succeed: true,
-		Data:    users,
+		Data:    usersDTO,
 	})
 }
 
@@ -86,33 +113,41 @@ func GetUsers(c *gin.Context) {
 // @Produce json
 // @Param user body models.User required "User ID or Username"
 // @Success 200 {object} UserResponse "Successful response with user data"
-// @Failure 400 {object} map[string]interface{} "Bad Request with error message"
-// @Failure 500 {object} map[string]interface{} "Internal Server Error with error message"
+// @Failure 400 {object} api.ErrorResponse "Bad Request with error message"
+// @Failure 500 {object} api.ErrorResponse "Internal Server Error with error message"
 // @Router /user [post]
 func CreateUser(c *gin.Context) {
-	var user models.User
-	err := c.BindJSON(&user)
+	userService, err := userservice.GetService()
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"succeed": false,
-			"message": "Bad request",
-			"error":   err,
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "User service not initialized",
+		})
+	}
+	var user *models.User
+	err = c.BindJSON(user)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Failed to bind to user",
 		})
 		return
 	}
-	err = user.Create()
+	err = userService.Create(user)
 
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"succeed": false,
-			"message": "Internal server error",
-			"error":   err,
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Create user failed",
 		})
 		return
 	}
 	c.JSON(http.StatusOK, UserResponse{
 		Succeed: true,
-		Data:    user,
+		Data:    user.ToDTO(),
 	})
 
 }
@@ -125,33 +160,42 @@ func CreateUser(c *gin.Context) {
 // @Produce json
 // @Param user body models.User required "User ID or Username"
 // @Success 200 {object} UserResponse "Successful response with user data"
-// @Failure 400 {object} map[string]interface{} "Bad Request with error message"
-// @Failure 500 {object} map[string]interface{} "Internal Server Error with error message"
+// @Failure 400 {object} api.ErrorResponse "Bad Request with error message"
+// @Failure 500 {object} api.ErrorResponse "Internal Server Error with error message"
 // @Router /user [put]
 func UpdateUser(c *gin.Context) {
-	var user models.User
+	userService, exists := c.MustGet("userService").(*userservice.UserService)
+	if !exists {
+		c.JSON(http.StatusInternalServerError,
+			api.ErrorResponse{
+				Succeed: false,
+				Error:   "Server configuration error"})
+		return
+	}
+
+	var user *models.User
 	err := c.BindJSON(&user)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"succeed": false,
-			"message": "Bad request",
-			"error":   err,
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Failed to bind to user",
 		})
 		return
 	}
-	err = user.Update()
+	err = userService.Update(user)
 
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"succeed": false,
-			"message": "Internal server error",
-			"error":   err,
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Update user failed",
 		})
 		return
 	}
 	c.JSON(http.StatusOK, UserResponse{
 		Succeed: true,
-		Data:    user,
+		Data:    user.ToDTO(),
 	})
 
 }
@@ -164,32 +208,41 @@ func UpdateUser(c *gin.Context) {
 // @Produce json
 // @Param user body models.User required "User ID or Username"
 // @Success 200 {object} UserResponse "Successful response with user data"
-// @Failure 400 {object} map[string]interface{} "Bad Request with error message"
-// @Failure 500 {object} map[string]interface{} "Internal Server Error with error message"
+// @Failure 400 {object} api.ErrorResponse "Bad Request with error message"
+// @Failure 500 {object} api.ErrorResponse "Internal Server Error with error message"
 // @Router /user [delete]
 func DeleteUser(c *gin.Context) {
-	var user models.User
+	userService, exists := c.MustGet("userService").(*userservice.UserService)
+	if !exists {
+		c.JSON(http.StatusInternalServerError,
+			api.ErrorResponse{
+				Succeed: false,
+				Error:   "Server configuration error"})
+		return
+	}
+	var user *models.User
 	err := c.BindJSON(&user)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"succeed": false,
-			"message": "Bad request",
-			"error":   err,
+		c.JSON(http.StatusBadRequest, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Failed to bind to user",
 		})
 		return
 	}
-	err = user.Delete()
+
+	err = userService.Delete(user.ID)
 
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"succeed": false,
-			"message": "Internal server error",
-			"error":   err,
+		c.JSON(http.StatusInternalServerError, api.ErrorResponse{
+			Succeed: false,
+			Error:   err.Error(),
+			Message: "Delete user failed",
 		})
 		return
 	}
+
 	c.JSON(http.StatusOK, UserResponse{
 		Succeed: true,
-		Data:    user,
 	})
 }
